# rust-aws-lambda

./: .gitignore  Cargo.toml  Dockerfile  readme.md
examples/: hello_payload.json
infra/: main.tf  providers.tf
src/: main.rs
